Fix content overflow (#1711)
Issue: AAH-396

--- a/src/components/my-imports/my-imports.scss
+++ b/src/components/my-imports/my-imports.scss
@@ -88,6 +88,10 @@
       font-weight: bold;
     }
 
+    pre {
+      white-space: pre-wrap;
+    }
+
     .stats {
       text-align: right;
       font-size: 12px;
@@ -133,6 +137,7 @@
     color: $white;
     line-height: 18px;
     margin-bottom: 50px;
+    word-break: break-word;
 
     .log-follow-button {
       position: relative;
